feat: add toll event recording handler
