# code/go/api/restapi/oas_validators_gen.go
@@ -69,3 +69,51 @@ func (s *ProblemStatusCode) Validate() error {
 	}
 	return nil
 }
+
+func (s *TollEvent) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := s.VehicleType.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "vehicle_type",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s TollEventVehicleType) Validate() error {
+	switch s {
+	case "car":
+		return nil
+	case "motorbike":
+		return nil
+	case "truck":
+		return nil
+	case "van":
+		return nil
+	case "tractor":
+		return nil
+	case "emergency":
+		return nil
+	case "diplomat":
+		return nil
+	case "foreign":
+		return nil
+	case "military":
+		return nil
+	default:
+		return errors.Errorf("invalid value: %v", s)
+	}
+}
